GL/Projet_GL/src/test/deca/context/valid/sansObjet/assign/assign_int_to_float.deca
// Test : assign_int_to_float
// But : tester la conversion implicite int vers float.
// Couvre : compatibilité des types, conversion implicite.
// Résultat attendu : compilation sans erreur.

{
    float f;
    f = 3;
}